--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
 }
 
 android {
+
     compileSdk 30
 
     defaultConfig {
@@ -40,7 +41,10 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.2.0'
     implementation project(path: ':http')
     implementation 'androidx.viewpager2:viewpager2:1.1.0-beta01'
+    implementation 'com.gitee.chinasoft_ohos:CityPicker:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+//    implementation 'com.github.xuexiangjys:citypicker:1.0.1'
+
 }
