--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:label="@string/app_name"
-        android:theme="@style/Theme.WeatherT">
+        android:theme="@style/Theme.WeatherT"
+        android:name=".MyApplication">
         <activity
             android:name=".ui.StartActivity"
             android:theme="@style/Theme.WeatherT.launch"
@@ -20,6 +21,7 @@
         </activity>
         <activity android:name=".ui.MainActivity" android:theme="@style/Theme.WeatherT.NoActionBar" android:launchMode="singleTop"/>
         <activity android:name=".ui.SecondActivity"/>
+        <activity android:name=".ui.CitiesManageActivity"/>
     </application>
 
 </manifest>
