--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,16 +12,18 @@
         <activity
             android:name=".ui.StartActivity"
             android:theme="@style/Theme.WeatherT.launch"
-            android:launchMode="singleTop">
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
         <activity android:name=".ui.MainActivity" android:theme="@style/Theme.WeatherT.NoActionBar" android:launchMode="singleTop"/>
         <activity android:name=".ui.SecondActivity"/>
-        <activity android:name=".ui.CitiesManageActivity"/>
+        <activity android:name=".ui.CitiesManageActivity" >
+        </activity>
     </application>
 
 </manifest>
